force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/fields/vlocity_ps__AssessmentDateFormat__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AssessmentDateFormat__c</fullName>
    <formula>vlocity_ps__AssessmentId__r.vlocity_ps__DateFormat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Date Format</label>
    <type>Text</type>
</CustomField>