force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/fields/vlocity_ps__AssessmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__AssessmentId__c</fullName>
    <label>Assessment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ps__Assessment__c.vlocity_ps__IsTemplate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ps__Assessment__c</referenceTo>
    <relationshipLabel>Assessment Questions</relationshipLabel>
    <relationshipName>AssessmentQuestions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>