force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/fields/vlocity_ps__IsTemplateQuestion__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsTemplateQuestion__c</fullName>
    <formula>vlocity_ps__AssessmentId__r.vlocity_ps__IsTemplate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Template Question</label>
    <type>Checkbox</type>
</CustomField>