force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/fields/vlocity_ps__ParentAssessmentId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__ParentAssessmentId__c</fullName>
    <formula>vlocity_ps__ParentQuestion__r.vlocity_ps__AssessmentId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentAssessmentId</label>
    <type>Text</type>
</CustomField>