force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/fields/vlocity_ps__Question__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Question__c</fullName>
    <label>Question</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>