force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/fields/vlocity_ps__Score__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__Score__c</fullName>
    <inlineHelpText>When completing an Assessment, stores the value resulting from the Answer to this specific Question.</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>