force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__Checkbox.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Checkbox</fullName>
    <active>true</active>
    <label>Checkbox</label>
</RecordType>