force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__Date.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Date</fullName>
    <active>true</active>
    <label>Date</label>
</RecordType>