force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__FreeText.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__FreeText</fullName>
    <active>true</active>
    <label>Free Text</label>
</RecordType>