force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__Instruction.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Instruction</fullName>
    <active>true</active>
    <label>Instruction</label>
</RecordType>