force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__MultiSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__MultiSelect</fullName>
    <active>true</active>
    <label>Multi Select</label>
</RecordType>