force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__Number.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__Number</fullName>
    <active>true</active>
    <label>Number</label>
</RecordType>