force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__QuestionTableMultiSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__QuestionTableMultiSelect</fullName>
    <active>true</active>
    <label>Question Table Multi Select</label>
</RecordType>