force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__QuestionTableSingleSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__QuestionTableSingleSelect</fullName>
    <active>true</active>
    <label>Question Table Single Select</label>
</RecordType>