force-app/main/default/objects/vlocity_ps__AssessmentQuestion__c/recordTypes/vlocity_ps__SingleSelect.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ps__SingleSelect</fullName>
    <active>true</active>
    <label>Single Select</label>
</RecordType>